final design update

--- a/index.html
+++ b/index.html
@@ -6,102 +6,211 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>B Kanhu Charan | UI UX Designer</title>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+        integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<body>
-
+<body id="home">
+    <div class="cursor"></div>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <a class="navbar-brand" href="#"><img src="logo.svg" alt=""></a>
+            <div class="navbar-section-links">
+                <ul class="navbar-nav me-center mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#about">about</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#projects">projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contact">contact</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="navbar-social">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link" href="#"><i class="fab fa-facebook "></i></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link" href="#"><i class="fab fa-behance "></i></a>
                     </li>
-
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><i class="fab fa-instagram "></i></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><i class="fab fa-linkedin-in "></i></a>
+                    </li>
+                </ul>
             </div>
         </div>
     </nav>
     <section class="container text-center-section hero-section">
         <small>About me</small>
-        <h1>I’m a freelance UI UX Designer based in Bhubaneswar, IN, with a rich experience in <span> website & app
-                design</span>.</h1>
+        <h1>Hi, I’m <b> B Kanhu Charan</b>, a freelance <span class="span-style-one">UI UX Designer</span> based in
+            <i>Bhubaneswar, IN</i>. <br> I help <span class="span-style-two"> small businesses</span> grow by creating
+            useful and beautiful solutions.
+        </h1>
+        <!-- <p> meet their goals and
+            bring
+            their
+            ingenious ideas to
+            life</p> -->
+        <br>
+        <br>
+        <!-- with a rich experience in
+            <span class="span-style-two"> website & app
+                design</span>. -->
+        <!-- <h2>
+            
+            I help <span class="span-style-two"> businesses</span> meet their goals and bring their ingenious ideas to
+            life
+        </h2> -->
     </section>
-    <!-- <section class="container-fluid portfolio-section">
-        <h1 class="text-center-section">Portfolio</h1>
-        <div class="row container">
-            <div class="project-item col-sm-12 col-md-6 col-lg-6">
-                <a href="https://gogroceries.store" target="_blank" rel="noopener noreferrer" class="project-link">
-                    <div class="project-card">
-                        <div class="project-card-image">
-                            <img src="assets/images/gog-v2.jpg" alt="" class="project-image">
-                        </div>
-                        <div class="project-card-body">
-                            <div class="project-info">Website Development</div>
-                            <h2 class="project-title">GoGroceries.store</h2>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="project-item col-sm-12 col-md-6 col-lg-6">
-                <a href="https://MaaBastralaya.com" target="_blank" rel="noopener noreferrer" class="project-link">
-                    <div class="project-card">
-                        <div class="project-card-image">
-                            <img src="assets/images/mb-store.jpg" alt="" class="project-image">
-                        </div>
-                        <div class="project-card-body">
-                            <div class="project-info">Website Development</div>
-                            <h2 class="project-title">MaaBastralaya.com</h2>
-                        </div>
-                    </div>
-                </a>
-            </div>
- 
+
+    <section id="projects">
 
 
-
+        <div class="project-header">
+            <h2>Featured <span>Projects</span></h2>
         </div>
-    </section> -->
-    <section>
-
-
         <div class="project-list container">
+            <!-- <img src="assets/images/featured-projects.svg" alt=""> -->
             <div class="row">
                 <div class="col-sm-12 col-md-5 col-lg-5 project--about">
-                    <small>UI UX Case Studies</small>
-                    <h2>Hire n X</h2>
-                    <small>, Android App</small>
+                    <!-- <small class="project--type">UI UX Case Studies</small> -->
+                    <h2>GoGroceries</h2>
+                    <small class="project--platform">Mobile Website</small>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam quasi placeat iste saepe
                         nesciunt voluptatum optio, officiis praesentium quam, ut eligendi earum accusantium quisquam
                         temporibus.</p>
+                    <a href="https://www.behance.net/gallery/119059097/GoGroceries-Shopping-App-UI-Design" class="link"
+                        target="_blank">View Project</a>
                 </div>
                 <div class="col-sm-12 col-md-7 col-lg-7 project--image">
-                    <img src="gogroceries.jpg" class="" alt="">
+                    <img src="gogroceriess.jpg" class="" alt="">
                 </div>
             </div>
         </div>
 
     </section>
+
+    <section id="contact">
+        <div class="contact-container">
+            <h2>Have a project in mind? <br /> Let's discuss.</h2>
+            <!-- 
+            <div class="email-copy">
+                <input type="email" disabled id="foo" value="iamkanhuc@gmail.com">
+                <button class="button" id="copy-button" data-clipboard-target="#post-shortlink">Copy</button>
+                <button type="button" class="btn" data-clipboard-target="#foo" class="btn btn-secondary"
+                    data-bs-toggle="tooltip" data-bs-placement="bottom" title="Click to copy Email">
+                    <i class="fas fa-clipboard"></i>
+                </button>
+                <textarea id="empty-field" placeholder="Paste your copied texts here for testing...."></textarea>
+            </div> -->
+            <div class="email-copy">
+                <p id="email">iamkanhuc@gmail.com</p>
+                <!-- <input type="email" disabled id="email" value="iamkanhuc@gmail.com"> -->
+                <!-- <br /> -->
+                <button onclick="copyToClipboard('#email')" data-bs-toggle="tooltip" data-bs-placement="bottom"
+                    title="Click to copy Email"><i class="fas fa-clipboard"></i></button>
+            </div>
+
+            <p class="email-success hidden">email copied!</p>
+        </div>
+        <!-- <h3 class="text-center mt-5 mb-2">You can find me on</h3> -->
+        <div class="social mt-2">
+
+            <a class="social-links" href="#"><i class="fab fa-facebook "></i></a>
+            <a class="social-links" href="#"><i class="fab fa-behance "></i></a>
+            <a class="social-links" href="#"><i class="fab fa-instagram "></i></a>
+            <a class="social-links" href="#"><i class="fab fa-linkedin-in "></i></a>
+            <a class="social-links" href="#"><i class="fab fa-dribbble "></i></a>
+            <a class="social-links" href="#"><i class="fab fa-github "></i></a>
+            <!-- <a class="social-links" href="#"><i class="fab fa-linkedin-in "></i></a> -->
+        </div>
+
+    </section>
+
+    <!-- <footer>
+        <div class="row">
+            <div class="col-6">
+                <p>Contact: hi@bkanhu.me
+
+                    <br>
+                    <small>@ 2021 Kanhu. All rights reserved</small>
+                </p>
+            </div>
+            <div class="col-6">
+                <a href="">Dribbble</a>
+                <a href="">Behance</a>
+                <a href="">Linkedin</a>
+                <a href="">Instagram</a>
+            </div>
+        </div>
+    </footer> -->
+    <footer>
+
+
+        <br>
+        <hr>
+        <p>© 2021 B Kanhu Charan.</p>
+        <!-- <small>Made with 💕 in </small> -->
+        <br>
+
+
+    </footer>
     <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+
+    <a href="#home">
+        <div class="scroll-top"><i class="fas fa-arrow-up"></i>dfjba</div>
+
+    </a>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
+        integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp"
         crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"
+        integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.8/clipboard.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>
+        function copyToClipboard(element) {
+            var $temp = $("<input>");
+            $("body").append($temp);
+            $temp.val($(element).text()).select();
+            document.execCommand("copy");
+            $temp.remove();
+            $(".email-success").removeClass("hidden");
+        }
+
+    </script>
+    <script>
+        const cursor = document.querySelector('.cursor');
+        document.addEventListener('mousemove', e => {
+            // console.log(e.pageX, e.pageY);
+            cursor.setAttribute('style', 'top: ' + e.pageY + 'px; left: ' + e.pageX + 'px;')
+        })
+    </script>
+    <script>
+        const scrollTop = document.querySelector('.scroll-top');
+        window.addEventListener('scroll', () => {
+            if (window.scrollY > 160) {
+                scrollTop.classList.add('show');
+            } else {
+                scrollTop.classList.remove('show');
+            }
+        })
+
+    </script>
 </body>
 
 </html>
