update with completly new design

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>B Kanhu Charan | UI UX Designer</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@600&family=Poppins&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
         integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -18,14 +22,14 @@
     <div class="cursor"></div>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="logo.svg" alt=""></a>
+            <a class="navbar-brand" href="index.html"><img src="logo.svg" alt=""></a>
             <div class="navbar-section-links">
                 <ul class="navbar-nav me-center mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">home</a>
+                        <a class="nav-link active" href="#">home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#about">about</a>
+                        <a class="nav-link" href="./about.html">about</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#projects">projects</a>
@@ -38,16 +42,19 @@
             <div class="navbar-social">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fab fa-facebook "></i></a>
+                        <a class="nav-link" href="https://www.facebook.com/bkanhu7/"><i
+                                class="fab fa-facebook "></i></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fab fa-behance "></i></a>
+                        <a class="nav-link" href="https://www.behance.net/bkanhu"><i class="fab fa-behance "></i></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fab fa-instagram "></i></a>
+                        <a class="nav-link" href="https://www.instagram.com/bkanhu7/"><i
+                                class="fab fa-instagram "></i></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fab fa-linkedin-in "></i></a>
+                        <a class="nav-link" href="https://www.linkedin.com/in/bkanhucharan/"><i
+                                class="fab fa-linkedin-in "></i></a>
                     </li>
                 </ul>
             </div>
@@ -55,10 +62,13 @@
     </nav>
     <section class="container text-center-section hero-section">
         <small>About me</small>
-        <h1>Hi, I’m <b> B Kanhu Charan</b>, a freelance <span class="span-style-one">UI UX Designer</span> based in
-            <i>Bhubaneswar, IN</i>. <br> I help <span class="span-style-two"> small businesses</span> grow by creating
-            useful and beautiful solutions.
+        <h1>Hi, I’m <b> Kanhu </b> — a freelance <span>UI Designer</span> based in
+            Bhubaneswar, IN.
         </h1>
+        <p>I help <span> small businesses</span> grow by creating useful and beautiful solutions.
+        </p>
+
+
         <!-- <p> meet their goals and
             bring
             their
@@ -66,6 +76,7 @@
             life</p> -->
         <br>
         <br>
+        <a href="#projects"><i class="fas fa-chevron-down"></i></a>
         <!-- with a rich experience in
             <span class="span-style-two"> website & app
                 design</span>. -->
@@ -80,13 +91,38 @@
 
 
         <div class="project-header">
-            <h2>Featured <span>Projects</span></h2>
+            <h2>Featured Projects</h2>
         </div>
-        <div class="project-list container">
-            <!-- <img src="assets/images/featured-projects.svg" alt=""> -->
+        <div class="project-container">
+            <!-- <a href="https://www.behance.net/gallery/119059097/GoGroceries-Shopping-App-UI-Design"> -->
+            <div class="project-card">
+                <div class="project-card-image">
+                    <img src="assets/images/gogroceries.png" alt="">
+                    <!-- <img src="https://via.placeholder.com/350" alt=""> -->
+                </div>
+                <div class="project-body">
+
+
+                    <h3><span>01</span> GoGroceries.store</h3>
+
+
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam quasi placeat iste saepe
+                        nesciunt voluptatum optio, officiis praesentium quam, ut eligendi earum accusantium quisquam
+                        temporibus.</p>
+                    <a href="https://www.behance.net/gallery/119059097/GoGroceries-Shopping-App-UI-Design"
+                        target="_blank">View
+                        Project</a>
+
+                </div>
+            </div>
+            <!-- </a> -->
+        </div>
+
+        <!-- <div class="project-list container">
+          
             <div class="row">
                 <div class="col-sm-12 col-md-5 col-lg-5 project--about">
-                    <!-- <small class="project--type">UI UX Case Studies</small> -->
+                 
                     <h2>GoGroceries</h2>
                     <small class="project--platform">Mobile Website</small>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam quasi placeat iste saepe
@@ -99,7 +135,7 @@
                     <img src="gogroceriess.jpg" class="" alt="">
                 </div>
             </div>
-        </div>
+        </div> -->
 
     </section>
 
@@ -129,12 +165,14 @@
         <!-- <h3 class="text-center mt-5 mb-2">You can find me on</h3> -->
         <div class="social mt-2">
 
-            <a class="social-links" href="#"><i class="fab fa-facebook "></i></a>
-            <a class="social-links" href="#"><i class="fab fa-behance "></i></a>
-            <a class="social-links" href="#"><i class="fab fa-instagram "></i></a>
-            <a class="social-links" href="#"><i class="fab fa-linkedin-in "></i></a>
-            <a class="social-links" href="#"><i class="fab fa-dribbble "></i></a>
-            <a class="social-links" href="#"><i class="fab fa-github "></i></a>
+            <a class="social-links" href="https://www.facebook.com/bkanhu7/"><i class="fab fa-facebook "></i></a>
+            <a class="social-links" href="https://www.behance.net/bkanhu"><i class="fab fa-behance "></i></a>
+            <a class="social-links" href="https://twitter.com/bkanhu7"><i class="fab fa-twitter "></i></a>
+            <a class="social-links" href="https://www.instagram.com/bkanhu7/"><i class="fab fa-instagram "></i></a>
+            <a class="social-links" href="https://www.linkedin.com/in/bkanhucharan/"><i
+                    class="fab fa-linkedin-in "></i></a>
+            <a class="social-links" href="https://dribbble.com/bkanhu"><i class="fab fa-dribbble "></i></a>
+            <a class="social-links" href="https://github.com/bkanhu"><i class="fab fa-github "></i></a>
             <!-- <a class="social-links" href="#"><i class="fab fa-linkedin-in "></i></a> -->
         </div>
 
@@ -160,11 +198,11 @@
     <footer>
 
 
-        <br>
+        <!-- <br> -->
         <hr>
-        <p>© 2021 B Kanhu Charan.</p>
+        <p>© 2021 - Made with love and anxiety. All rights reserved.</p>
         <!-- <small>Made with 💕 in </small> -->
-        <br>
+        <!-- <br> -->
 
 
     </footer>
