update about page and homepage

--- a/about.html
+++ b/about.html
@@ -61,7 +61,21 @@
             </div>
         </div>
     </nav>
-    <section class="container text-center-section hero-section">
+    <section class="container text-center-section about-section">
+        <div class="row">
+            <div class="col-3"><img src="assets/images/gogroceries.png" alt=""></div>
+            <div class="col-9">
+                <p>Hey there! I'm Kanhu, a UI Designer who loves challenging projects that help me grow as a better
+                    designer, a problem-solver. </p>
+
+                <p>During my undergraduate years when I was exploring more technology, and programming. I started with
+                    Front-end development as I was fascinated by the idea of making a website and sharing with the
+                    world.
+                    After some time I found out Design is the part that excites me more. So I started reading more about
+                    design and here I'm now doing freelance work as UI Designer. </p>
+                <p>When I'm not immersed in Design, you'll find me planning imaginary trips, listening to music, taking
+                    pictures of beautiful nature or the starry night.</p>
+            </div>
     </section>
 
     <section id="contact">
