--- a/index.html
+++ b/index.html
@@ -106,9 +106,8 @@
                     <h3><span>01</span> GoGroceries.store</h3>
 
 
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam quasi placeat iste saepe
-                        nesciunt voluptatum optio, officiis praesentium quam, ut eligendi earum accusantium quisquam
-                        temporibus.</p>
+                    <p>GoGroceries.store, A grocery shopping website allows users to shop grocery and daily needs from
+                        the ease of their home.</p>
                     <a href="https://www.behance.net/gallery/119059097/GoGroceries-Shopping-App-UI-Design"
                         target="_blank">View
                         Project</a>
