fix css update about image

--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
     </nav>
     <section class="container text-center-section about-section">
         <div class="row">
-            <div class="col-3"><img src="assets/images/gogroceries.png" alt=""></div>
+            <div class="col-3"><img src="assets/images/bkanhu.png" alt=""></div>
             <div class="col-9">
                 <p>Hey there! I'm Kanhu, a UI Designer who loves challenging projects that help me grow as a better
                     designer, a problem-solver. </p>
