fix-css and desc on aboutpage

--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
     </nav>
     <section class="container text-center-section hero-section">
         <small>About me</small>
-        <h1>Hi, I’m <b> Kanhu </b> — a freelance <span>UI Designer</span> based in
+        <h1>Hi, I’m <b> Kanhu </b> — a freelance <span>Web Developer</span> based in
             Bhubaneswar, IN.
         </h1>
-        <p>I help <span> small businesses</span> grow by creating useful and beautiful solutions.
+        <p>I help <span> small businesses</span> grow by creating useful solutions.
         </p>
 
 
@@ -108,9 +108,12 @@
 
                     <p>GoGroceries.store, A grocery shopping website allows users to shop grocery and daily needs from
                         the ease of their home.</p>
-                    <a href="https://www.behance.net/gallery/119059097/GoGroceries-Shopping-App-UI-Design"
-                        target="_blank">View
-                        Project</a>
+                    <div class="link-container">
+
+                        <a href="https://www.behance.net/gallery/119059097/GoGroceries-Shopping-App-UI-Design"
+                            target="_blank">View Design on Behance</a>
+                        <a href="http://gogroceries.store/" target="_blank">View Project</a>
+                    </div>
 
                 </div>
             </div>
