--- a/about.html
+++ b/about.html
@@ -65,17 +65,49 @@
         <div class="row">
             <div class="col-3"><img src="assets/images/bkanhu.png" alt=""></div>
             <div class="col-9">
-                <p>Hey there! I'm Kanhu, a UI Designer who loves challenging projects that help me grow as a better
-                    designer, a problem-solver. </p>
+                <p>Hello! I’m B. Kanhu Charan a self-taught Front-end web developer based in Bhubaneswar, India
+                    Specializing in developing high quality websites with simple content structure, clean design
+                    patterns and keeping great UX in mind. </p>
 
                 <p>During my undergraduate years when I was exploring more technology, and programming. I started with
                     Front-end development as I was fascinated by the idea of making a website and sharing with the
-                    world.
-                    After some time I found out Design is the part that excites me more. So I started reading more about
-                    design and here I'm now doing freelance work as UI Designer. </p>
-                <p>When I'm not immersed in Design, you'll find me planning imaginary trips, listening to music, taking
+                    world. So I started reading more about Front-end development.</p>
+                <p>When I'm not immersed in Design or development of website, you'll find me planning imaginary trips,
+                    listening to music, taking
                     pictures of beautiful nature or the starry night.</p>
+
+
+                <!-- <div class="tech-container">
+                    <h2>
+                        Tech. I Use</h2>
+
+                    <h3>Tech</h3>
+                   
+                    <span class="col-lg-2">HTML5</span>
+                    <span class="col-lg-2">CSS3</span>
+                    <span class="col-lg-2">JS</span>
+                    <span class="col-lg-2">Sass</span>
+                    <span class="col-lg-2">Bootstrap</span>
+                    <span class="col-lg-2">React JS</span>
+                    <span class="col-lg-2">Wordpress</span>
+              
+
+                    <h3>Tools</h3>
+                    <span class="col-lg-2">Linux</span>
+                    <span class="col-lg-2">Git</span>
+
+                    <h3>Design</h3>
+                    <span class="col-lg-2">Figma</span>
+                    <span class="col-lg-2">Adobe XD</span>
+                    <span class="col-lg-2">Photoshop</span>
+                    <span class="col-lg-2">Lightroom</span>
+                </div> -->
+
+
+                <!-- <img src="" alt=""> -->
+                <!-- div.col-lg-4. -->
             </div>
+        </div>
     </section>
 
     <section id="contact">
