few design changes on hero, projects section, add services section and add /uses page

--- a/uses.html
+++ b/uses.html
@@ -29,10 +29,10 @@
                         <a class="nav-link " href="index.html">home</a>
                     </li>
                     <li class=" nav-item">
-                        <a class="nav-link active" href="./about.html">about</a>
+                        <a class="nav-link" href="./about.html">about</a>
                     </li>
                     <li class=" nav-item">
-                        <a class="nav-link" href="./uses.html">uses</a>
+                        <a class="nav-link active" href="./uses.html">uses</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="index.html#projects">projects</a>
@@ -64,55 +64,96 @@
             </div>
         </div>
     </nav>
-    <section class="container text-center-section about-section">
-        <div class="row">
-            <div class="col-3"><img src="assets/images/bkanhu.png" alt="">
+    <section class="container text-center-section uses-page">
+        <h2>/Uses</h2>
+        <p class="uses-para">Here is a detailed list of all (or most) of the tools I use for web development.
+            Information on this page
+            update frequently.</p>
+        <div class="uses-container row">
+            <div class="col-6">
+                <div class="languages">
+                    <h3>Languages</h3>
+                    <p>As a front-end developer my languages look like this. </p>
+                    <ul>
+                        <li>HTML5</li>
+                        <li>Vanilla CSS, Sass, CSS-in-JS</li>
+                        <li>Javascript: ES6+</li>
+                        <li>React JS</li>
+                        <!-- <li></li> -->
+                    </ul>
+                </div>
+                <div class="editor">
+                    <h3>Editors </h3>
+                    <ul>
+                        <li>Editor: VS Code</li>
+                        <li>Theme: ‣ <a href="https://github.com/bkanhu/owl-pro">OWL PRO </a></li>
+                        <li>VS Code Extensions:
+                            <ul>
+                                <li>Prettier - Code formatter</li>
+                                <li>Material Icon Theme</li>
+                                <li>Bracket Pair Colorizer</li>
+                                <li>ES7 React/Redux/GraphQL/React-Native snippets</li>
+                                <li>Live Sass Compiler</li>
+                                <li>Live Server</li>
+                                <li>Live Share</li>
+                                <li>Live Share</li>
+                                <!-- <li></li> -->
+                                <!-- <li></li> -->
+                            </ul>
 
-                <a href="Resume-B.-Kanhu-Charan.pdf" target="_blank" class="resume-btn">Resume</a>
-            </div>
-            <div class="col-9">
-                <p>Hello! I’m B. Kanhu Charan a self-taught Front-end web developer based in Bhubaneswar, India
-                    Specializing in developing high quality websites with simple content structure, clean design
-                    patterns and keeping great UX in mind. </p>
-
-                <p>During my undergraduate years when I was exploring more technology, and programming. I started with
-                    Front-end development as I was fascinated by the idea of making a website and sharing with the
-                    world. So I started reading more about Front-end development.</p>
-                <p>When I'm not immersed in Design or development of website, you'll find me planning imaginary trips,
-                    listening to music, taking
-                    pictures of beautiful nature or the starry night.</p>
-
-
-                <!-- <div class="tech-container">
-                    <h2>
-                        Tech. I Use</h2>
-
-                    <h3>Tech</h3>
-                   
-                    <span class="col-lg-2">HTML5</span>
-                    <span class="col-lg-2">CSS3</span>
-                    <span class="col-lg-2">JS</span>
-                    <span class="col-lg-2">Sass</span>
-                    <span class="col-lg-2">Bootstrap</span>
-                    <span class="col-lg-2">React JS</span>
-                    <span class="col-lg-2">Wordpress</span>
-              
-
+                        </li>
+                    </ul>
+                </div>
+                <div class="tools">
                     <h3>Tools</h3>
-                    <span class="col-lg-2">Linux</span>
-                    <span class="col-lg-2">Git</span>
-
-                    <h3>Design</h3>
-                    <span class="col-lg-2">Figma</span>
-                    <span class="col-lg-2">Adobe XD</span>
-                    <span class="col-lg-2">Photoshop</span>
-                    <span class="col-lg-2">Lightroom</span>
-                </div> -->
-
-
-                <!-- <img src="" alt=""> -->
-                <!-- div.col-lg-4. -->
+                    <ul>
+                        <li>Git + Github</li>
+                        <li>Netlify</li>
+                        <li>Vercel</li>
+                        <!-- <li></li> -->
+                    </ul>
+                </div>
             </div>
+            <div class="col-6">
+                <div class="gear">
+                    <h3>Gears</h3>
+                    <ul>
+                        <li>Google Pixel 3a</li>
+                        <li>Lenovo Ideapad 330 with Ryzen 5 2500u and 8GB Ram</li>
+                        <li>Lenovo 19'' secondary monitor</li>
+                        <li>Logitech M235 Wireless Mouse</li>
+                        <li>IEM: KZ - ZST Pro</li>
+                    </ul>
+                </div>
+                <div class="softwares">
+                    <h3>Softwares</h3>
+                    <ul>
+                        <li>Google Chrome</li>
+                        <li>Notion - I use it for note-taking, and task management.</li>
+                        <li>Bitwarden - an open-source password manager</li>
+                        <li>Figma - An incredible tool for UI design</li>
+                        <li>Windows Terminal</li>
+                        <li>WSL2</li>
+                        <li>RSS Reader</li>
+                        <li>f.lux</li>
+                    </ul>
+                </div>
+                <div class="chrome-extensions">
+                    <h3>Chrome Extensions</h3>
+                    <ul>
+                        <li>uBlock Origin</li>
+                        <li>Bitwarden</li>
+                        <li>ColorZilla</li>
+                        <li>JSON Viewer</li>
+                        <li>ogmeta</li>
+                        <li>Picture-in-Picture Extension </li>
+                        <li>tabExtend</li>
+                        <li>Stylus</li>
+                    </ul>
+                </div>
+            </div>
+            <p>updated: <span style="font-style: italic;"> 15-12-2021</span></p>
+            <p>check out <a href="https://uses.tech/">uses.tech</a> for a list of <code> /uses </code>pages!</p>
         </div>
     </section>
 
