removed services for later add with real tet insted of placeholder

--- a/index.html
+++ b/index.html
@@ -71,25 +71,12 @@
         <p>I help <span> small businesses</span> grow by creating useful solutions.
         </p>
 
-
-        <!-- <p> meet their goals and
-            bring
-            their
-            ingenious ideas to
-            life</p> -->
         <br>
         <br>
         <a href="#projects"><i class="fas fa-chevron-down"></i></a>
-        <!-- with a rich experience in
-            <span class="span-style-two"> website & app
-                design</span>. -->
-        <!-- <h2>
-            
-            I help <span class="span-style-two"> businesses</span> meet their goals and bring their ingenious ideas to
-            life
-        </h2> -->
+
     </section>
-    <section id="services">
+    <!-- <section id="services">
         <div class="service-header">
             <h2 class="center-heading text-center">What I Do</h2>
             <p class="text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet, nobis?</p>
@@ -116,13 +103,13 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <section id="projects">
 
 
         <div class="project-header">
             <h2 class="center-heading text-center">Featured Projects</h2>
-            <p class="text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet, nobis?</p>
+            <!-- <p class="text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet, nobis?</p> -->
         </div>
 
         <div class="project-containers">
@@ -168,27 +155,17 @@
     <section id="contact">
         <div class="contact-container">
             <h2>Have a project in mind? <br /> Let's discuss.</h2>
-            <!-- 
-            <div class="email-copy">
-                <input type="email" disabled id="foo" value="iamkanhuc@gmail.com">
-                <button class="button" id="copy-button" data-clipboard-target="#post-shortlink">Copy</button>
-                <button type="button" class="btn" data-clipboard-target="#foo" class="btn btn-secondary"
-                    data-bs-toggle="tooltip" data-bs-placement="bottom" title="Click to copy Email">
-                    <i class="fas fa-clipboard"></i>
-                </button>
-                <textarea id="empty-field" placeholder="Paste your copied texts here for testing...."></textarea>
-            </div> -->
+
             <div class="email-copy">
                 <p id="email">iamkanhuc@gmail.com</p>
-                <!-- <input type="email" disabled id="email" value="iamkanhuc@gmail.com"> -->
-                <!-- <br /> -->
+
                 <button onclick="copyToClipboard('#email')" data-bs-toggle="tooltip" data-bs-placement="bottom"
                     title="Click to copy Email"><i class="fas fa-clipboard"></i></button>
             </div>
 
             <p class="email-success hidden">email copied!</p>
         </div>
-        <!-- <h3 class="text-center mt-5 mb-2">You can find me on</h3> -->
+
         <div class="social mt-2">
 
             <a class="social-links" href="https://www.facebook.com/bkanhu7/"><i class="fab fa-facebook "></i></a>
@@ -204,23 +181,6 @@
 
     </section>
 
-    <!-- <footer>
-        <div class="row">
-            <div class="col-6">
-                <p>Contact: hi@bkanhu.me
-
-                    <br>
-                    <small>@ 2021 Kanhu. All rights reserved</small>
-                </p>
-            </div>
-            <div class="col-6">
-                <a href="">Dribbble</a>
-                <a href="">Behance</a>
-                <a href="">Linkedin</a>
-                <a href="">Instagram</a>
-            </div>
-        </div>
-    </footer> -->
     <footer>
 
 
